# integration-cookbook

./: .gitignore  AGENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  feature_request.md
.github/workflows/: lint.yml
api/: README.md
api/applicants-fetch-all-python/: README.md  TROUBLESHOOTING.md  avela_api_client.py  requirements.txt
api/form-school-tags-import-python/: README.md  form_school_tags_import.py  requirements.txt  sample_tags.csv
api/forms-download-files-python/: README.md  config.example.json  download_form_files.py  form_ids.example.txt  requirements.txt
api/forms-download-files-python/advanced/: README.md  config.example.json  download_form_files.py
api/forms-update-csv-python/: README.md  config.example.json  form_update_client.py  sample_address_updates.csv  sample_updates.csv
api/offers-update-status-python/: README.md  offer_status_client.py  sample_offers.csv
api/register-forms-find-school-python/: README.md  config.example.json  find_school_for_register_forms.py
doc/: 20260112_plan_batch_tags_api_update.md
shared/python/: README.md  avela_client.py  pyproject.toml
