[project]
name = "integration-cookbook"
version = "0.1.0"
description = "Production-ready integration patterns for the Avela Education Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Avela Education", email = "api-support@avela.org"}
]

dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # Let formatter handle line length

fixable = ["ALL"]
unfixable = []

exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
    "*/venv/*",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
